# AndroidVulkanApp

./: .gitignore  README.md  build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Utils.cpp  Utils.h  VulkanCore.cpp  VulkanCore.h  VulkanRenderer.h  VulknaRenderer.cpp  hellovk.h  main.cpp  stb_image.h  vk_main.cpp
app/src/main/java/com/android/myapp/: AppState.kt  ControlsFragment.kt  VulkanActivity.kt
app/src/main/res/layout/: fragment_controls.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: shader.frag  shader.vert
